Fixed spacing in navbar

--- a/styles/index-page.css
+++ b/styles/index-page.css
@@ -181,7 +181,7 @@ a{
 .nav-link-container{
     display: flex;
     align-items: center;
-    margin-left: 2%;
+    margin-left: 5%;
 }
 
 .nav-link-items{
